# request-exceptions-transit

./: .env.template  .gitignore  Dockerfile  README.md  app.py  codes.csv  codes.py  config.py  docker-compose.yml  emails.py  forms.py  models.py  pyproject.toml  requirements.txt  scf.xlsx  schedulers.py  settings.template.py  statusmap.py  utils.py
app/: __init__.py  extensions.py
app/emails/: emails.py
app/forms/: institutionform.py  loginform.py  usersettingsform.py
app/models/: externalrequestintransit.py  institution.py  instupdate.py  requestexception.py  statususer.py  transitstart.py  user.py  useractive.py  userday.py
app/report/: __init__.py  routes.py
app/schedulers/: schedulers.py
app/static/css/: style.css
app/static/js/: frontend.js
app/templates/: base.html  edit_institution.html  error_400.html  error_500.html  index.html  institution.html  login.html  settings.html  unauthorized.html
app/utils/: utils.py
etc/systemd/system/: exceptions.service
static/css/: styles.css
static/js/: frontend.js
templates/: add_institution.html  base.html  edit_institution.html  index.html  institution.html  login.html  settings.html  users.html
