[tool.poetry]
name = "request-exceptions-transit"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.11.0"
beautifulsoup4 = "^4.12.3"
blinker = "^1.9.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
cryptography = "^44.0.0"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
et-xmlfile = "^2.0.0"
flask = "^3.1.0"
flask-apscheduler = "^1.13.1"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-metadata = "^8.5.0"
infinity = "^1.5"
intervals = "^0.9.2"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
lml = "^0.1.0"
lxml = "^5.3.0"
markupsafe = "^3.0.2"
numpy = "^2.2.0"
odfpy = "^1.4.1"
openpyxl = "^3.1.5"
packaging = "^24.2"
pandas = "^2.2.3"
pycparser = "^2.22"
pyexcel = "^0.7.1"
pyexcel-io = "^0.6.7"
pyexcel-webio = "^0.1.4"
pymemcache = "^4.0.0"
pymysql = "^1.1.1"
pyopenssl = "^24.3.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
pyxlsb = "^1.0.10"
requests = "^2.32.3"
six = "^1.17.0"
soupsieve = "^2.6"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
texttable = "^1.7.0"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
tzlocal = "^5.2"
urllib3 = "^2.2.3"
validators = "^0.34.0"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"
wtforms-alchemy = "^0.19.0"
wtforms-components = "^0.11.0"
xlrd = "^2.0.1"
xlsxwriter = "^3.2.0"
zipp = "^3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
